# lexcare-ai

./: .env.example  .gitignore  Makefile  README.md  environment.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: main.py
app/api/: __init__.py  routes.py  schemas.py
app/core/: config.py
app/dependencies/: container.py
app/domain/: ingestion.py  models.py  source.py  source_artifact.py  versioning.py  warehouse.py
app/domain/warehouse/: __init__.py  hubs.py  keys.py  links.py  satellites.py
app/infrastructure/: llm_client.py  pdf_loader.py  vectorstore.py
app/infrastructure/connectors/: __init__.py  api_connector.py  base.py  factory.py  file_connector.py  rss_connector.py  web_connector.py
app/infrastructure/spark/: session.py
app/prompts/: __init__.py  rag_prompt.py
app/repositories/: contracts.py  document_repository.py  document_version_repository.py  hub_document_repository.py  hub_source_repository.py  hub_topic_repository.py  ingestion_index_repository.py  link_document_topic_repository.py  satellite_document_content_repository.py  satellite_document_metadata_repository.py  source_registry.py
app/repositories/contracts/: __init__.py  document.py  ingestion.py  source.py  versioning.py  warehouse.py
app/services/: chunking_service.py  document_processing_service.py  document_versioning_service.py  embedding_service.py  generation_service.py  hub_document_service.py  hub_source_service.py  hub_topic_service.py  incremental_ingestion_service.py  ingestion_service.py  link_document_topic_service.py  rag_service.py  retriever_service.py  satellite_document_content_service.py  satellite_document_metadata_service.py  source_registry_service.py  spark_document_processing_service.py  text_cleaning_service.py  vectorstore_service.py
data/: source_registry.yaml  sources.yaml
data/evaluation/: test_questions.json
experiments/notebooks/: 00_sanity_check.ipynb  02_pdf_extraction_experiments.ipynb  10_pyspark_processing.ipynb  11_hub_source.ipynb  11_hub_warehouse.ipynb  12_warehouse_satellites.ipynb  _bootstrap.py
notebooks/: 00_sanity_check.ipynb  01_data_exploration.ipynb  03_chunking_test.ipynb  04_embedding_comparisons.ipynb  05_retrieval_evaluation.ipynb  06_prompt_experiments.ipynb  08_incremental_ingestion.ipynb  _bootstrap.py
notebooks/data/processed/: ingestion_index.json
scripts/: sync_source_registry.py
tests/: conftest.py  helpers.py  test_health.py
tests/api/: test_api.py  test_document_api.py  test_query_api.py
tests/data/processed/: document_versions.json  ingestion_index.json
tests/infrastructure/: test_pdf_loader.py
tests/infrastructure/connectors/: test_connector.py  test_connector_factory.py
tests/integration/: test_incremental_ingestion_versioning.py  test_registry_factory.py  test_spark_processing.py
tests/repositories/: test_document_repository.py  test_document_version_repository.py  test_source_registry.py
tests/services/: test_chunking_service.py  test_document_processing_service.py  test_document_versioning_service.py  test_embedding_service.py  test_generation_service.py  test_hub_document_service.py  test_hub_topic_service.py  test_incremental_ingestion_service.py  test_ingestion_service.py  test_link_document_topic_service.py  test_rag_service.py  test_retriever_service.py  test_satellite_document_content_service.py  test_satellite_document_metadata_service.py  test_source_registry_service.py  test_text_cleaning_service.py
(+54 files in other folders)
