[project]
name = "lexcare-ai"
version = "0.1.0"
description = "AI-powered RAG assistant for healthcare regulations, legislation, and policy updates."
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Rodrigue Lawson" }
]

license = { text = "MIT" }

keywords = [
    "rag",
    "langchain",
    "fastapi",
    "healthcare",
    "legislation",
    "vector-search",
    "ai",
    "yaml"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Intended Audience :: Developers"
]

[project.urls]
Homepage = "https://github.com/RodrigueAI/lexcare-ai"
Repository = "https://github.com/RodrigueAI/lexcare-ai"

# --------------------------------------------------------------------
# Setuptools Package Discovery
# --------------------------------------------------------------------

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = [
    "data*",
    "notebooks*",
    "tests*"
]

# --------------------------------------------------------------------
# Black
# --------------------------------------------------------------------

[tool.black]
line-length = 100
target-version = ["py312"]

# --------------------------------------------------------------------
# Isort
# --------------------------------------------------------------------

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

# --------------------------------------------------------------------
# Pytest
# --------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]

python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

markers = [
    "integration: integration tests",
    "e2e: end-to-end tests",
]

addopts = [
    "--strict-markers",
    "--tb=short"
]

# --------------------------------------------------------------------
# Coverage
# --------------------------------------------------------------------

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = false

# --------------------------------------------------------------------
# MyPy
# --------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
pretty = true
exclude = [
    "notebooks/",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["feedparser"]
ignore_missing_imports = true

# --------------------------------------------------------------------
# Ruff
# --------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"

extend-exclude = [
    "notebooks",
    "*.ipynb",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

ignore = [
    "E501",
]

# --------------------------------------------------------------------
# Build System
# --------------------------------------------------------------------

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"